# epl-data-analysis

./: .cursorrules  .gitignore  README.md  TASK.md  pyproject.toml  report.md
data/processed/: merged_epl_24_25.csv
reports/: final_report.md  results.csv  results2.csv  top_3.txt  value_estimation.md
src/: analysis.py  data_collection.py  ml_analysis.py
